# updater

./: .gitignore  BUILD_GUIDE.md  CLAUDE.md  Cargo.toml  INITIALIZATION_PARAMETERS.md  PATH_FIX_SUMMARY.md  README_NETWORK.md  build_network.sh  build_updater.sh  test_ios_binary.rs  test_network_lib.dart  test_network_simple.dart
.claude/: settings.local.json
build_network/: README.md
build_network/ios/ShorebirdUpdaterNetwork.xcframework/: Info.plist
build_output/: build_report.txt
build_output/ios/: updater.h
library_network/: Cargo.toml.backup
library_network/include/: updater.h
library_network/src/: android.rs  config.rs  ios_snapshot_parser.rs  ios_snapshots.rs  lib.rs  network_client.rs  updater_lock.rs  updater_network.rs  yaml.rs
library_network/src/c_api/: c_file.rs  mod.rs
library_network/src/cache/: patch_manager.rs
shorebird_code_push/: FLUTTER_USAGE.md  README.md
shorebird_code_push/example/lib/: main.dart
shorebird_code_push/lib/: shorebird_code_push.dart
shorebird_code_push/lib/src/: shorebird_updater.dart  updater.dart
shorebird_code_push_network/: README.md  pubspec.yaml
shorebird_code_push_network/android/: build.gradle
shorebird_code_push_network/android/src/main/cpp/: CMakeLists.txt  shorebird_network_jni.cpp
shorebird_code_push_network/example/: pubspec.yaml  test_updater.sh
shorebird_code_push_network/example/ios/: Podfile
shorebird_code_push_network/ios/: README.md  shorebird_code_push_network.podspec
shorebird_code_push_network/lib/: shorebird_code_push_network.dart
target_network/: .rustc_info.json
(+1905 files in other folders)
